Update home layout and add heading component

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -62,6 +62,7 @@
 		'components/image-mozaic',
 		'components/contact-details',
 		'components/tabs',
+		'components/heading',
 		'components/sitemap';
 
 // @import 'modules/latest-news';
