--- a/iCAN.Web/Views/Partials/Components/Quote.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Quote.cshtml
@@ -24,7 +24,7 @@
 					<strong>@Model.Source</strong>
 				}
 				@if (hasTitle) {
-					@:Model.Title
+					@Model.Title
 				}
 			</footer>
         }
