--- a/_assets/sass/tools/mixins.scss
+++ b/_assets/sass/tools/mixins.scss
@@ -6,7 +6,7 @@
 
 @mixin heading-font-size( $font-size ) {
 	font-size: $font-size;
-	padding-bottom: $font-size / 2;
+	margin-bottom: $font-size / 3;
 }
 
 @mixin old-ie() {
