--- a/_assets/sass/settings/global.scss
+++ b/_assets/sass/settings/global.scss
@@ -45,6 +45,7 @@ $flcikr: 					#0063dc;
 // utility
 
 $box-shadow-1:				0 0 30px rgba($black,0.1);
+$box-shadow-2:				0 0 60px rgba(0, 0, 0, 0.15);
 
 /* ===========================================================
 
@@ -78,7 +79,7 @@ $disabled:					$light-1;
 // section padding
 $padding-small:				4rem;
 $padding-medium:			6rem;
-$padding-large:				8rem;
+$padding-large:				10rem;
 
 $border-width: 				.2rem;
 $border-radius: 			.3rem;
