update primary and secondary colours & add cta to nav

--- a/_assets/sass/components/buttons.scss
+++ b/_assets/sass/components/buttons.scss
@@ -37,6 +37,11 @@
 	@include respond-min($mq-small) {
 		display: inline-block;
 	}
+
+	&.c-button--small {
+		padding-top: 0.7rem;
+		padding-bottom: 0.7rem;
+	}
 }
 
 .c-button--primary {
