--- a/_assets/sass/components/heading.scss
+++ b/_assets/sass/components/heading.scss
@@ -9,7 +9,7 @@
 		width: 8rem;
 		height: .4rem;
 		display: block;
-		background-color: $pri;
+		background-color: $sec;
 		margin: $line-height 0;
 	}
 
@@ -25,7 +25,7 @@
 
 .c-heading__headline,
 .c-heading__subtitle {
-	color: $pri;
+	color: $sec;
 }
 
 .c-heading__subtitle {
