--- a/_assets/sass/components/quote.scss
+++ b/_assets/sass/components/quote.scss
@@ -17,12 +17,12 @@
 }
 
 .c-quote__src {
-	color: $pri;
+	color: $sec;
 	margin-top: $line-height;
 }
 
 .c-quote:before{
-	color: $pri;
+	color: $sec;
 	height: 5rem;
 	font-size: 6.4rem;
 	font-weight: 700;
