--- a/iCAN.Web/Views/Partials/Components/Card.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Card.cshtml
@@ -32,7 +32,7 @@
 				</div>
 			}
 			@if (!String.IsNullOrWhiteSpace(Model.Url)) {
-				<div class="c-card__cta c-button c-button--secondary">@Model.CtaName</div>
+				<div class="c-card__cta c-button c-button--primary">@Model.CtaName</div>
 			}
         </div>
     </a>
