--- a/iCAN.Web/Views/Partials/Components/Cover.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Cover.cshtml
@@ -21,7 +21,7 @@
 				</div>
 			}
 			@if (hasLink) {
-				<a href="@Model.Url" class="c-cover__cta c-button c-button--secondary u-space-top" target="@Model.Target">@Model.CtaName</a>
+				<a href="@Model.Url" class="c-cover__cta c-button c-button--primary u-space-top" target="@Model.Target">@Model.CtaName</a>
 			}
 		</div>
 	</div>
