--- a/iCAN.Web/Views/Partials/Modules/Header.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/Header.cshtml
@@ -6,6 +6,7 @@
 }
 
 <header id="header" class="c-header" role="banner">
+	@Html.Partial("~/Views/Partials/Components/SuperNavigation.cshtml")
 	<div class="o-wrap o-wrap--x-large">
 		<a href="/" class="c-header__logo-link">
 			<img src="/assets/img/logo.png" alt="@siteName" class="c-header__logo-image">
