--- a/_assets/sass/components/carousel.scss
+++ b/_assets/sass/components/carousel.scss
@@ -4,170 +4,189 @@
 
 =========================================================== */
 
-.js-carousel {
+.no-enhance {
+
+	.c-carousel__inner {
+		@include clearfix();
+		margin-bottom: -$line-height;
+	}
 
 	.c-carousel__item {
-		display: none;
-	}
-
-	.c-carousel__item--first {
 		display: block;
+		@include column(1/2, $cycle: 2);
+		margin-bottom: $line-height;
 	}
 
-	&.slick-initialized {
+}
+
+.enhance {
+
+	.js-carousel {
 
 		.c-carousel__item {
-			display: block;
+			display: none;
+
+			&:first-child {
+				display: block;
+			}
+		}
+
+		&.slick-initialized {
+
+			.c-carousel__item {
+				display: block;
+			}
+
 		}
 
 	}
 
-}
-
-.c-carousel {
-	position: relative;
-}
-
-.c-carousel__nav {
-	color: $white;
-	background-color: $pri;
-	padding: 1rem;
-	border-radius: 50%;
-	position: absolute;
-	top: 50%;
-	z-index: 2;
-	line-height: 1;
-	font-size: 3.2rem;
-	text-align: center;
-	transition: color $speed $ease,
-				background-color $speed $ease;
-
-	&:hover,
-	&:focus {
-		background-color: $sec;
+	.c-carousel {
+		position: relative;
 	}
 
-	&.slick-disabled {
+	.c-carousel--prev,
+	.c-carousel--next {
+		position: absolute;
+		top: 50%;
+		z-index: 2;
+		line-height: 1;
+		transform: translateY( -50% );
+		background-color: $white;
+		padding: 1.9rem 2rem;
+		border-radius: 50%;
+		box-shadow: 0 0 60px rgba(#444,0.3);
+		transition: background-color $speed $ease,
+					transform $speed $ease;
+
 		&:before {
-			color: lighten( $border-colour, 5 );
+			color: $pri;
+			transition: color $speed $ease;
 		}
-	}
-}
 
-.c-carousel__nav--prev {
-	left: 0;
-	transform: translate( -50%, -50% );
-}
+		.ico-arrow-left,
+		.ico-arrow-right {
+			transition: border-color $speed $ease;
+		}
 
-.c-carousel__nav--next {
-	right: 0;
-	transform: translate( 50%, -50% );
-}
+		.ico-arrow-left {
+			@include arrow-left();
+		}
 
-.c-carousel--invert {
-
-	.c-carousel__nav {
-		color: $white;
-		opacity: .5;
-		transition: opacity $speed $ease;
+		.ico-arrow-right {
+			@include arrow-right();
+		}
 
 		&:hover,
 		&:focus {
-			opacity: 1;
+			background-color: $dark-1;;
+
+			.ico-arrow-left {
+				border-right-color: $white;
+			}
+
+			.ico-arrow-right {
+				border-left-color: $white;
+			}
+		}
+
+		&.slick-disabled {
+			opacity: 0.2;
+			cursor: default;
+
+			&:hover {
+				transform: translate(0, -50%);
+				background-color: inherit;
+
+				.ico-arrow-left {
+					border-right-color: inherit;
+				}
+
+				.ico-arrow-right {
+					border-left-color: inherit;
+				}
+			}
 		}
 	}
 
-}
+	.c-carousel--prev {
+		left: -2.2rem;
 
-/* dots */
-
-.c-carousel__dots {
-    position: relative;
-    list-style: none;
-    display: block;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-
-    li {
-        position: relative;
-        display: inline-block;
-        width: 2.1rem;
-		height: 2.1rem;
-        margin: 0 .5rem;
-        padding: 0;
-        cursor: pointer;
-	}
-
-    button {
-        border: .2rem solid $pri;
-        background: transparent;
-        display: block;
-        height: 2.1rem;
-        width: 2.1rem;
-        outline: none;
-        line-height: 0;
-        font-size: 0;
-        color: transparent;
-        padding: .5rem;
-        cursor: pointer;
-		border-radius: 50%;
-		transition: background-color $speed $ease,
-					border-color $speed $ease;
-
-        &:hover,
-		&:focus {
-            outline: none;
-			background-color: $pri;
-        }
-    }
-
-	.slick-active {
-
-		button {
-			background-color: $pri;
+		&:hover {
+			transform: translate(-5px, -50%);
 		}
-
 	}
 
-}
+	.c-carousel--next {
+		right: -2.2rem;
 
-.c-carousel--invert {
+		&:hover {
+			transform: translate(5px, -50%);
+		}
+	}
+
+	/* dots */
 
 	.c-carousel__dots {
-
-		button {
-			border-color: $white;
-		}
+		position: relative;
+		list-style: none;
+		display: block;
+		text-align: center;
+		padding: 0;
+		margin: 0;
+		width: 100%;
 
 		li {
-			&.slick-active {
-				background-color: $white;
+			position: relative;
+			display: inline-block;
+			width: 2.1rem;
+			height: 2.1rem;
+			margin: 0 .5rem;
+			padding: 0;
+			cursor: pointer;
+
+			&:before {
+				display: none !important;
 			}
 
 			&:hover,
+			&:focus,
+			&.slick-active {
+
+				button:before {
+					background-color: $pri;
+				}
+
+			}
+
+		}
+
+		button {
+			border: .2rem solid $pri;
+			background: transparent;
+			display: block;
+			height: 2.1rem;
+			width: 2.1rem;
+			outline: none;
+			line-height: 0;
+			font-size: 0;
+			color: transparent;
+			padding: .5rem;
+			cursor: pointer;
+			border-radius: 50%;
+
+			&:hover,
 			&:focus {
-				background-color: $white;
+				outline: none;
 			}
 		}
 
-	}
+		.slick-active {
+			button {
+				background-color: $pri;
+			}
+		}
 
-}
-
-.c-carousel--images {
-	.c-carousel__dots {
-		position: absolute;
-		bottom: $line-height;;
-	}
-}
-
-
-@include respond-min( $mq-large ) {
-
-	.c-carousel__nav {
-		font-size: 4.8rem;
 	}
 
 }
@@ -182,6 +201,16 @@
 		overflow: visible;
 	}
 
+	.slick-slide {
+		margin: 0 1.5rem;
+		opacity: 0.1;
+		transition: opacity 0.6s $ease;
+
+		&.slick-active {
+			opacity: 1;
+		}
+	}
+
 }
 
 .flexbox {
@@ -194,7 +223,6 @@
 		.slick-slide {
 			height: auto;
 			display: flex;
-			padding: 0 1.5rem;
 
 			& > div {
 				display: flex;
@@ -208,43 +236,43 @@
 
 }
 
-	@include respond-min( $mq-medium ) {
+@include respond-min( $mq-medium ) {
 
-		.no-enhance {
+	.no-enhance {
 
-			.c-carousel--cards {
-				@include clearfix();
-
-				.c-card {
-					@include column(1/3, $cycle: 3);
-				}
-
-			}
-
-		}
-
-	}
-
-
-	@include respond-min( $mq-xx-large + 60px ) {
-
-		.c-carouse--large,
 		.c-carousel--cards {
+			@include clearfix();
 
-			.c-carousel--prev,
-			.c-carousel--next {
-				padding: 2.6rem 2.7rem;
-				box-shadow: 0 0 60px rgba(68, 68, 68, 0.5);
-			}
-
-			.c-carousel--prev {
-				left: -6rem;
-			}
-
-			.c-carousel--next {
-				right: -6rem;
+			.c-card {
+				@include column(1/3, $cycle: 3);
 			}
 
 		}
 
 	}
+
+}
+
+
+@include respond-min( $mq-xx-large + 60px ) {
+
+	.c-carouse--large,
+	.c-carousel--cards {
+
+		.c-carousel--prev,
+		.c-carousel--next {
+			padding: 2.6rem 2.7rem;
+			box-shadow: 0 0 60px rgba(68, 68, 68, 0.5);
+		}
+
+		.c-carousel--prev {
+			left: -6rem;
+		}
+
+		.c-carousel--next {
+			right: -6rem;
+		}
+
+	}
+
+}
