--- a/_assets/sass/base/table.scss
+++ b/_assets/sass/base/table.scss
@@ -5,14 +5,35 @@
 =========================================================== */
 
 table {
-	border: $border-width solid $border-colour;
+	border: 0;
 	border-collapse: collapse;
 	width: 100%;
+	font-size: 1.5rem;
 }
 
 th,
 td {
+	border-right: $border-width solid $border-colour;
 	border-bottom: $border-width solid $border-colour;
-	padding: 1rem 2rem;
+	padding: 1.5rem 2rem;
 	text-align: left;
+
+	&:last-child {
+		border-right: 0;
+	}
+}
+
+th,
+thead td {
+	font-weight: $bold;
+	background-color: $light-1;
+}
+
+
+tbody tr:last-child {
+
+	td {
+		border-bottom: 0;
+	}
+
 }
