--- a/_assets/sass/components/quote.scss
+++ b/_assets/sass/components/quote.scss
@@ -8,6 +8,11 @@
 	position: relative;
 	line-height: 1.3;
 	quotes: "\201C""\201D""\2018""\2019";
+
+	&.o-align--default {
+		width: 100%;
+		margin-left: 0;
+	}
 }
 
 .c-quote__copy {
