--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -295,8 +295,8 @@ small,
 hr {
   height: 1px;
   border: none;
-  color: #ccc;
-  background-color: #ccc; }
+  color: #f7f5f2;
+  background-color: #f7f5f2; }
 
 @media only screen and (min-width: 800px) {
   body,
@@ -504,15 +504,28 @@ li {
 
 =========================================================== */
 table {
-  border: 0.2rem solid #ccc;
+  border: 0;
   border-collapse: collapse;
-  width: 100%; }
+  width: 100%;
+  font-size: 1.5rem; }
 
 th,
 td {
-  border-bottom: 0.2rem solid #ccc;
-  padding: 1rem 2rem;
+  border-right: 0.1rem solid #f7f5f2;
+  border-bottom: 0.1rem solid #f7f5f2;
+  padding: 1.5rem 2rem;
   text-align: left; }
+  th:last-child,
+  td:last-child {
+    border-right: 0; }
+
+th,
+thead td {
+  font-weight: 700;
+  background-color: #f7f5f2; }
+
+tbody tr:last-child td {
+  border-bottom: 0; }
 
 /* ===========================================================
 
@@ -523,7 +536,7 @@ input,
 select,
 textarea {
   background: none;
-  border: 0.2rem solid #ccc;
+  border: 0.1rem solid #f7f5f2;
   border-radius: 0.3rem;
   padding: 1rem 1.5rem;
   transition: border 0.3s ease;
@@ -755,7 +768,7 @@ html {
   padding-bottom: 0.425em; }
 
 .o-label__note {
-  color: #ccc;
+  color: #f7f5f2;
   float: right;
   font-size: .8em;
   font-style: italic; }
@@ -775,17 +788,17 @@ html {
       padding-right: 1rem; }
   .o-select:after {
     background: #FFFFFF;
-    border-radius: 0 0.1rem 0.1rem 0;
+    border-radius: 0 0.2rem 0.2rem 0;
     box-sizing: border-box;
-    color: #ccc;
+    color: #f7f5f2;
     content: '\25BE';
     display: block;
     height: calc( 100% - .2rem);
     padding: 1rem 1.5rem;
     position: absolute;
     pointer-events: none;
-    right: 0.2rem;
-    top: 0.2rem;
+    right: 0.1rem;
+    top: 0.1rem;
     z-index: 0; }
     .lt-ie10 .o-select:after {
       display: none; }
@@ -824,7 +837,7 @@ html {
     width: 2rem;
     height: 2rem;
     background: transparent;
-    border: 0.2rem solid #ccc;
+    border: 0.1rem solid #f7f5f2;
     box-sizing: border-box;
     content: '';
     position: absolute;
@@ -923,11 +936,11 @@ html {
   clear: both; }
 
 @media only screen and (min-width: 800px) {
-  .o-align--default.o-media {
+  .o-align--default {
     margin-left: -3rem;
     margin-right: -3rem; }
-  .o-align--left.o-media,
-  .o-align--right.o-media {
+  .o-align--left,
+  .o-align--right {
     width: 45%; }
   .o-align--left {
     float: left;
@@ -939,11 +952,11 @@ html {
     margin-left: 1.7em; } }
 
 @media only screen and (min-width: 1000px) {
-  .o-align--default.o-media {
+  .o-align--default {
     margin-left: -15%;
     margin-right: -15%; }
-  .o-align--left.o-media,
-  .o-align--right.o-media {
+  .o-align--left,
+  .o-align--right {
     width: 55%; }
   .o-align--left {
     margin-left: -15%; }
@@ -1734,11 +1747,11 @@ img.mfp-img {
   .c-button:focus {
     box-shadow: 0 0.3rem 0 0 rgba(0, 0, 0, 0.1); }
   .c-button.is-disabled {
-    background: #ccc;
+    background: #f7f5f2;
     color: #FFFFFF;
     cursor: not-allowed; }
     .c-button.is-disabled:hover, .c-button.is-disabled:focus {
-      background: #ccc; }
+      background: #f7f5f2; }
   @media only screen and (min-width: 600px) {
     .c-button {
       display: inline-block; } }
@@ -1788,6 +1801,9 @@ img.mfp-img {
   position: relative;
   line-height: 1.3;
   quotes: "“" "”" "‘" "’"; }
+  .c-quote.o-align--default {
+    width: 100%;
+    margin-left: 0; }
 
 .c-quote__copy {
   display: block;
@@ -2906,6 +2922,9 @@ img.mfp-img {
 	# Tabs
 
 =========================================================== */
+.c-tabs {
+  clear: both; }
+
 .no-enhance .c-tabs__nav {
   border-left: 0.2rem solid #ff9933;
   margin-bottom: 1.7em; }
@@ -3000,34 +3019,51 @@ img.mfp-img {
     visibility: visible; }
 
 /* Theme */
-.enhance .c-tabs__nav {
-  padding-left: 5rem;
-  padding-right: 5rem; }
-
-.enhance .c-tabs__nav-item + .c-tabs__nav-item {
-  margin-left: 1.7em; }
-
-.enhance .c-tabs__nav-item .c-tabs__nav-tab {
-  color: #FFFFFF;
-  background-color: #ff9933;
-  padding: 1.4rem 4rem;
-  border-radius: 0.3rem 0.3rem 0 0; }
-  .enhance .c-tabs__nav-item .c-tabs__nav-tab:hover, .enhance .c-tabs__nav-item .c-tabs__nav-tab:focus {
-    background-color: #ff8c1a; }
-
-.enhance .c-tabs__nav-item.is-active .c-tabs__nav-tab {
-  color: #ff9933;
-  background-color: #f7f5f2; }
-
-.enhance .c-tabs__page,
-.enhance .c-tabs__content {
-  background-color: #f7f5f2; }
-
 .enhance .c-tabs__page {
-  padding: 1rem; }
+  display: none; }
+
+.enhance .c-tabs__nav {
+  border-bottom: 1px solid #f7f5f2; }
+  .enhance .c-tabs__nav::after {
+    content: "";
+    width: 90%;
+    height: 2rem;
+    z-index: 1;
+    position: absolute;
+    right: 10%;
+    bottom: -2rem;
+    left: 10%;
+    display: block !important;
+    border-radius: 100%;
+    box-shadow: 0 -6px 10px 0 rgba(0, 0, 0, 0.05); }
+
+.enhance .c-tabs__nav-item {
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  -webkit-transform: translateY(0.5rem);
+      -ms-transform: translateY(0.5rem);
+          transform: translateY(0.5rem); }
+  .enhance .c-tabs__nav-item.is-active {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0); }
+  .enhance .c-tabs__nav-item + .c-tabs__nav-item {
+    margin-left: 0.85em; }
+  .enhance .c-tabs__nav-item .c-tabs__nav-tab {
+    color: #000000;
+    letter-spacing: 2px;
+    background-color: #f7f5f2;
+    padding: 1.4rem 4rem;
+    border-radius: 3rem 3rem 0 0; }
+    .enhance .c-tabs__nav-item .c-tabs__nav-tab:hover, .enhance .c-tabs__nav-item .c-tabs__nav-tab:focus {
+      background-color: #ede9e2; }
+  .enhance .c-tabs__nav-item.is-active .c-tabs__nav-tab {
+    color: #FFFFFF;
+    background-color: #222222; }
 
 .enhance .c-tabs__content-tab {
-  padding: 3.4em; }
+  padding: 1.7em 0; }
 
 /* ===========================================================
 	# Heading
@@ -3090,8 +3126,8 @@ img.mfp-img {
     height: 1.7em;
     position: absolute;
     top: -0.85em;
-    border-left: 1px solid #ccc;
-    border-bottom: 1px solid #ccc; }
+    border-left: 1px solid #f7f5f2;
+    border-bottom: 1px solid #f7f5f2; }
 
 .c-sitemap__link {
   margin-left: 2.55em; }
