--- a/iCAN.Web/css/RTE.css
+++ b/iCAN.Web/css/RTE.css
@@ -1,4 +1,31 @@
+table {
+	border: 0;
+	border-collapse: collapse;
+	width: 100%;
+}
 
+th,
+td {
+	border-right: 1px solid #f1f1f2;
+	border-bottom: 1px solid #f1f1f2;
+	padding: 15px 20px;
+	text-align: left;
+}
+
+th:last-child,
+td:last-child {
+	border-right: 0;
+}
+th,
+thead td {
+	font-weight: 700;
+	background-color: #f1f1f2;
+}
+
+
+tbody tr:last-child td {
+	border-bottom: 0;
+}
 
 /**umb_name:Heading 1*/
 h2{}
